# ascendancy

./: CONTRIBUTING.md  Cargo.toml  todo
.cargo/: config.toml
ascendancy_game/: Cargo.toml
ascendancy_game/assets/ron/: factions.ron
ascendancy_game/assets/sprites/icons/ships/: small-trader.aseprite
ascendancy_game/assets/sprites/icons/structures/: station_1.aseprite
ascendancy_game/manifests/: base_game.item_manifest.json
ascendancy_game/src/: main.rs
ascendancy_lib/: Cargo.toml
ascendancy_lib/src/: enum_iter.rs  lib.rs
ascendancy_lib/src/Ui/: mod.rs  selected_panel.rs
ascendancy_lib/src/agent/: agent.rs  fly_to_system_action.rs  idle.rs  mod.rs  pathfinding.rs  random_path.rs  utils.rs
ascendancy_lib/src/asset_management/: mod.rs
ascendancy_lib/src/asset_management/manifest/: loader.rs  mod.rs  plugin.rs
ascendancy_lib/src/faction/: attributes.rs  bank.rs  claims.rs  mod.rs
ascendancy_lib/src/graphics/: lighting.rs
ascendancy_lib/src/items/: item_manifest.rs  item_tags.rs  mod.rs
ascendancy_lib/src/loading/: loading.rs  mod.rs
ascendancy_lib/src/menu/: menu.rs  mod.rs
ascendancy_lib/src/player_interactions/: camera.rs  mod.rs  selection.rs
ascendancy_lib/src/solar_system/: attributes.rs  events.rs  gates.rs  mod.rs
ascendancy_lib/src/structures/: mod.rs  stargate.rs  station.rs
ascendancy_lib/src/structures/services/: dock.rs  market.rs  mod.rs  solar_generator.rs
ascendancy_lib/src/units/: agent.rs  fly_to_system_action.rs  mod.rs  pathfinding.rs  pathing.rs  wandering_action.rs
ascendancy_lib/src/world_gen/: faction_generation.rs  generate_system_path.rs  mod.rs  npc_generation.rs  solar_system_generation.rs  stargate_generation.rs
ascendancy_macros/: Cargo.toml
