[package]
name = "ascendancy_game"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Leafwing Studios"]
edition = "2021"

[dependencies]
bevy = {version = "0.13.0"}
ascendancy_lib ={ path = "../ascendancy_lib", version = "0.1"}
bevy-inspector-egui = "0.23.2"
bevy_screen_diagnostics = "0.5.0"
bevy_common_assets = {version= "0.10.0", features=["ron"]}
bevy_mod_picking = { git = "https://github.com/StrikeForceZero/bevy_mod_picking", rev="0b6ec5c"}
big-brain =  { git = "https://github.com/zkat/big-brain", rev="50415e5"}
