[package]
name = "ascendancy_lib"
version = "0.1.0"
authors = ["Leafwing Studios"]
license = "MIT OR Apache 2.0"
edition = "2021"

[dependencies]
bevy = {version = "0.12.1"}
# bevy_kira_audio ={ git = "https://github.com/NiklasEi/bevy_kira_audio?branch=bevy_main", features = ["mp3"]}
rand = "0.8"
# template_macros = {version = "0.1", path = "../ascendancy_macros"}
petitset = "0.2"
serde = "1.0.152"
derive_more = "0.99.17"
leafwing-input-manager = "0.11.2"
hexx = "0.12.0"
petgraph = "0.6.4"
bevy_mod_picking = "0.17.0"
big-brain =  { git = "https://github.com/zkat/big-brain", rev="bdf51c3"}
futures-lite = "2.1.0"